// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaField component renders 1`] = `
.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-2);
}

.sxdiu5c {
  color: var(--sx-colors-secondary300);
  display: block;
  font-family: var(--sx-fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxdiu5cjqqvr--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.625;
}

.sxdiu5cjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxdiu5cjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxduzhy {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal500);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  color: var(--sx-colors-tonal900);
  font-family: var(--sx-fonts-sans);
  font-size: var(--sx-fontSizes-md);
  font-weight: 400;
  line-height: 1.4;
  min-height: var(--sx-sizes-6);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  padding-top: calc(var(--sx-space-2) + var(--sx-space-1));
  padding-bottom: calc(var(--sx-space-2) + var(--sx-space-1));
  resize: vertical;
  transition: all 75ms ease-out;
  width: 100%;
}

.sxduzhy:focus {
  border-color: var(--sx-colors-primary900);
  box-shadow: inset 0 0 0 1px var(--sx-colors-primary900);
  outline: none;
}

.sxduzhy[disabled] {
  opacity: 0.7;
  background-color: var(--sx-colors-tonal300);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxdiu5c sxdiu5cjqqvr--size-md"
          for="description"
        />
      </div>
      <textarea
        class="sxduzhy"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;

exports[`TextareaField component renders with an error 1`] = `
.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--sx-space-2);
}

.sxdiu5c {
  color: var(--sx-colors-secondary300);
  display: block;
  font-family: var(--sx-fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxdiu5cjqqvr--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.625;
}

.sxdiu5cjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxdiu5cjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxduzhy {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--sx-colors-tonal500);
  border-radius: var(--sx-radii-0);
  box-shadow: none;
  color: var(--sx-colors-tonal900);
  font-family: var(--sx-fonts-sans);
  font-size: var(--sx-fontSizes-md);
  font-weight: 400;
  line-height: 1.4;
  min-height: var(--sx-sizes-6);
  padding-left: var(--sx-space-3);
  padding-right: var(--sx-space-3);
  padding-top: calc(var(--sx-space-2) + var(--sx-space-1));
  padding-bottom: calc(var(--sx-space-2) + var(--sx-space-1));
  resize: vertical;
  transition: all 75ms ease-out;
  width: 100%;
}

.sxduzhy:focus {
  border-color: var(--sx-colors-primary900);
  box-shadow: inset 0 0 0 1px var(--sx-colors-primary900);
  outline: none;
}

.sxduzhy[disabled] {
  opacity: 0.7;
  background-color: var(--sx-colors-tonal300);
}

<div>
  <form
    aria-label="form"
    class="sx03kze"
  >
    <div
      class="sx03kze"
    >
      <div
        class="sx2cs53 sx2cs53-re4mk"
      >
        <label
          class="sxdiu5c sxdiu5cjqqvr--size-md"
          for="description"
        />
      </div>
      <textarea
        class="sxduzhy"
        error="Error Message"
        id="description"
        name="description"
        placeholder="placeholder"
      />
    </div>
  </form>
</div>
`;
